--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p class="p1">&lt;html&gt;</p>
 <p class="p1">&lt;body&gt;</p>
 <p class="p1">&lt;h1&gt;Hello&lt;/h1&gt;</p>
+<p class="p1">&lt;h2&gt;New Version&lt;/h2&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
